[project]
name = "todoist-grader"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["test_grader.py", "test_snapshot.py", "test_todoist_api.py"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["test_*.py", "explore_api.py", ".venv/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
